# lightcurve-db

./: .dockerignore  .gitignore  PROJECT_STRUCTURE.md  README.md  quick_start.sh  set_permissions.sh
configs/: healpix_config.py
cpp/: CMakeLists.txt  DATA_PATH_GUIDE.md  README.md  README_MULTITHREADED.md  benchmark_multithreaded.sh  benchmark_results_20250611_215128.txt  benchmark_results_20250611_220055.txt  benchmark_results_20250611_220553.txt  build.sh  compare_io_performance.md  compile_multithreaded.sh  debug_healpix  debug_healpix.cpp  debug_healpix_64  debug_healpix_64.cpp  generate_astronomical_data.cpp  install_dependencies.sh  performance_comparison.md  query_test  query_test.cpp  query_test1  query_test1.cpp  query_test_async  query_test_mt  quick_import.cpp  quick_import_mt  quick_import_optimized  quick_import_optimized.cpp  quick_import_simple  quick_test_io.sh  run_performance_comparison.sh  run_with_data.sh  test_io_performance.sh  test_progress_demo.sh
docker_volumes/tdengine_data/dnode/: dnode.info  dnode.json
docker_volumes/tdengine_data/dnode/config/: global.json  local.json
docker_volumes/tdengine_data/explorer/: explorer.db-shm  explorer.db-wal
docker_volumes/tdengine_data/mnode/wal/: meta-ver2
docker_volumes/tdengine_data/vnode/: vnodes.json
docker_volumes/tdengine_data/vnode/vnode2/: vnode.json
docker_volumes/tdengine_data/vnode/vnode2/meta/: main.tdb-journal.16
docker_volumes/tdengine_data/vnode/vnode2/wal/: meta-ver0
docker_volumes/tdengine_data/vnode/vnode3/: vnode.json
docker_volumes/tdengine_data/vnode/vnode3/wal/: meta-ver0
docker_volumes/tdengine_data/vnode/vnode4/: vnode.json
docker_volumes/tdengine_data/vnode/vnode5/: vnode.json
docker_volumes/tdengine_data/vnode/vnode5/sync/: raft_config.json
docker_volumes/tdengine_data/vnode/vnode5/wal/: meta-ver0
docker_volumes/tdengine_log/: taosdlog.0  taoslog0.0  taoslog1.0  udfdlog.0
docs/: command.md  original_README.md  timestamp_solution_summary.md  数据库结构.md  文件说明.md
minimal_healpix_package/: query_test_async.cpp  quick_import.cpp
minimal_healpix_package/healpix-offline-deploy/: OFFLINE_DEPLOY.md
scripts/: db_info.sh  generate_astronomical_data.py  query_test.py  quick_import.py  temporal_queries_examples.sql
(+6 files in other folders)
